--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
-  <div class="container my-5" x-data="productApp()">
+  <div class="container my-5" x-data="productApp()" x-init="init()">
     <h2 class="mb-4">產品清單</h2>
+
+    <!-- 切換顯示按鈕 -->
+    <button class="btn btn-secondary mb-3" @click="showOnlyWithCount = !showOnlyWithCount">
+      <span x-text="showOnlyWithCount ? '顯示全部商品' : '只顯示有數量的商品'"></span>
+    </button>
+
+    <!-- 表格 -->
     <table class="table table-bordered table-striped">
       <thead class="table-primary text-center">
         <tr>
+          <th>選擇</th>
           <th>品名</th>
           <th>單價</th>
           <th>數量</th>
@@ -21,21 +29,18 @@
       </thead>
       <tbody>
         <template x-for="item in items" :key="item.product_name">
-          <tr class="text-center">
+          <tr class="text-center" x-show="!showOnlyWithCount || item.count > 0">
+            <td><input type="checkbox" x-model="item.checked"></td>
             <td x-text="item.product_name"></td>
-            <td>
-              <input type="number" class="form-control" x-model.number="item.price" @input="update(item)">
-            </td>
-            <td>
-              <input type="number" class="form-control" x-model.number="item.count" @input="update(item)">
-            </td>
+            <td><input type="number" class="form-control" x-model.number="item.price" @input="update(item)"></td>
+            <td><input type="number" class="form-control" x-model.number="item.count" @input="update(item)"></td>
             <td x-text="item.total.toFixed(2)"></td>
           </tr>
         </template>
       </tbody>
       <tfoot>
         <tr class="table-info text-end">
-          <td colspan="3"><strong>應收總金額</strong></td>
+          <td colspan="4"><strong>應收總金額</strong></td>
           <td><strong x-text="calculateTotal().toFixed(2)"></strong></td>
         </tr>
       </tfoot>
@@ -48,16 +53,23 @@
     </div>
   </div>
 
+  <!-- Alpine.js 程式邏輯 -->
   <script>
     function productApp() {
       return {
         items: [],
+        showOnlyWithCount: false,
         init() {
-          // 從外部 JSON 檔案載入資料
           fetch('products.json')
             .then(response => response.json())
             .then(data => {
-              this.items = data; 
+              this.items = data.map(item => ({
+                ...item,
+                count: item.count || 0,
+                price: item.price || 0,
+                total: 0,
+                checked: false
+              }));
             })
             .catch(error => console.error('無法載入資料:', error));
         },
@@ -70,7 +82,7 @@
         generateText() {
           let text = '';
           this.items.forEach(item => {
-            if (item.count > 0) {
+            if (item.checked && item.count > 0) {
               text += `${item.product_name} : ${item.count} ;\n`;
             }
           });
