--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
   <div class="container my-5" x-data="productApp()" x-init="init()">
-    <div class="d-flex justify-content-between align-items-center mb-3">
-
+    <div class="d-flex justify-content-between align-items-center mb-3 flex-wrap gap-2">
       <h2>產品清單</h2>
-  
+
       <!-- 顯示切換 -->
       <button class="btn btn-secondary" @click="showOnlyWithCount = !showOnlyWithCount">
         <span x-text="showOnlyWithCount ? '顯示全部商品' : '只顯示有數量的商品'"></span>
       </button>
-  
-      <button class="btn btn-danger" @click="resetAll()">重置</button>
 
+      <!-- 重置 -->
+      <button class="btn btn-danger" @click="resetAll()">重置</button>
     </div>
+
     <!-- 商品表格 -->
     <table class="table table-bordered table-striped">
       <thead class="table-primary text-center">
@@ -55,6 +55,8 @@
     <div class="mt-4 d-flex gap-2 flex-wrap">
       <button class="btn btn-primary" @click="generateText()">生成文字並複製</button>
     </div>
+
+    <!-- 顯示結果 -->
     <textarea x-ref="outputText" class="form-control mt-2" rows="5" readonly></textarea>
   </div>
 
@@ -110,8 +112,8 @@
         generateText() {
           let text = '';
           this.items.forEach(item => {
-            if (item.checked && item.count > 0) {
-              text += `${item.product_name} : ${item.count} ;\n`;
+            if (item.count > 0) {
+              text += `${item.product_name}:${item.count};\n`; // ✅ 這裡改格式
             }
           });
           this.$refs.outputText.value = text;
