--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>送貨價格試算表</title>
+  <title>價格試算表</title>
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
   <div class="container my-5" x-data="productApp()" x-init="init()">
+    <h2 class="text-center">產品清單</h2>
     <div class="d-flex justify-content-between align-items-center mb-3 flex-wrap gap-2">
-      <h2>產品清單</h2>
 
       <!-- 選擇資料來源 -->
       <select class="form-select w-auto" x-model="currentSource" @change="loadData()" title="選擇資料來源">
