--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>價格試算表</title>
+  <title>試算表</title>
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
@@ -11,23 +11,18 @@
   <div class="container my-5" x-data="productApp()" x-init="init()">
     <h2 class="text-center">產品清單</h2>
     <div class="d-flex justify-content-between align-items-center mb-3 flex-wrap gap-2">
-
-      <!-- 選擇資料來源 -->
       <select class="form-select w-auto" x-model="currentSource" @change="loadData()" title="選擇資料來源">
         <option value="non_pickup">送貨</option>
         <option value="pickup">自取</option>
       </select>
-
-      <!-- 顯示切換 -->
       <button class="btn btn-secondary" @click="showOnlyWithCount = !showOnlyWithCount">
         <span x-text="showOnlyWithCount ? '顯示全部商品' : '只顯示有數量的商品'"></span>
       </button>
-
-      <!-- 重置 -->
       <button class="btn btn-danger" @click="resetAll()">重置</button>
     </div>
 
-    <!-- 商品表格 -->
+    <!-- 餅類表格 -->
+    <h4>餅類</h4>
     <table class="table table-bordered table-striped">
       <thead class="table-primary text-center">
         <tr>
@@ -39,7 +34,7 @@
         </tr>
       </thead>
       <tbody>
-        <template x-for="item in items" :key="item.product_name">
+        <template x-for="item in otherItems()" :key="item.product_name">
           <tr class="text-center" x-show="!showOnlyWithCount || item.count > 0">
             <td><input type="checkbox" x-model="item.checked" @change="saveToLocalStorage()"></td>
             <td x-text="item.product_name"></td>
@@ -51,11 +46,53 @@
       </tbody>
       <tfoot>
         <tr class="table-info text-end">
-          <td colspan="4"><strong>應收總金額</strong></td>
-          <td><strong x-text="calculateTotal().toFixed(2)"></strong></td>
+          <td colspan="4"><strong>餅類小計</strong></td>
+          <td><strong x-text="calculateOtherGroupsTotal().toFixed(2)"></strong></td>
         </tr>
       </tfoot>
     </table>
+
+  <div class="d-flex justify-content-between mb-2">
+    <!-- 零食 表格 -->
+    <h4>零食類</h4>
+    <button class="btn btn-secondary" @click="showOnlyWithCount = !showOnlyWithCount">
+      <span x-text="showOnlyWithCount ? '顯示全部商品' : '只顯示有數量的商品'"></span>
+    </button>
+
+  </div>
+    <table class="table table-bordered table-striped">
+      <thead class="table-warning text-center">
+        <tr>
+          <th>清點</th>
+          <th>品名</th>
+          <th>單價</th>
+          <th>數量</th>
+          <th>總價</th>
+        </tr>
+      </thead>
+      <tbody>
+        <template x-for="item in group4Items()" :key="item.product_name">
+          <tr class="text-center" x-show="!showOnlyWithCount || item.count > 0">
+            <td><input type="checkbox" x-model="item.checked" @change="saveToLocalStorage()"></td>
+            <td x-text="item.product_name"></td>
+            <td x-text="item.price"></td>
+            <td><input type="number" class="form-control" x-model.number="item.count" @input="update(item)"></td>
+            <td x-text="item.total.toFixed(2)"></td>
+          </tr>
+        </template>
+      </tbody>
+      <tfoot>
+        <tr class="table-warning text-end">
+          <td colspan="4"><strong>零食類小計</strong></td>
+          <td><strong x-text="calculateGroup4Total().toFixed(2)"></strong></td>
+        </tr>
+      </tfoot>
+    </table>
+
+    <!-- 總金額 -->
+    <div class="text-end my-3">
+      <h5>應收總金額：<span x-text="calculateTotal().toFixed(2)"></span></h5>
+    </div>
 
     <!-- 功能按鈕區 -->
     <div class="mt-4 d-flex gap-2 flex-wrap">
@@ -65,7 +102,6 @@
       </button>
     </div>
 
-    <!-- 顯示結果 -->
     <textarea x-ref="outputText" class="form-control mt-2" rows="5" readonly></textarea>
   </div>
 
@@ -74,7 +110,7 @@
       return {
         items: [],
         showOnlyWithCount: false,
-        currentSource: localStorage.getItem('jsonSource') || 'non_pickup', // 預設來源
+        currentSource: localStorage.getItem('jsonSource') || 'non_pickup',
 
         init() {
           this.loadData();
@@ -82,7 +118,7 @@
 
         loadData() {
           const fileName = this.currentSource === 'pickup' ? 'pickup.json' : 'non_pickup.json';
-          localStorage.setItem('jsonSource', this.currentSource); // 儲存選項
+          localStorage.setItem('jsonSource', this.currentSource);
           const savedData = JSON.parse(localStorage.getItem('productData_' + this.currentSource) || '{}');
 
           fetch(fileName)
@@ -121,8 +157,24 @@
           localStorage.setItem('productData_' + this.currentSource, JSON.stringify(dataToSave));
         },
 
+        group4Items() {
+          return this.items.filter(item => item.product_group == 4);
+        },
+
+        otherItems() {
+          return this.items.filter(item => item.product_group != 4);
+        },
+
+        calculateGroup4Total() {
+          return this.group4Items().reduce((sum, item) => sum + (item.total || 0), 0);
+        },
+
+        calculateOtherGroupsTotal() {
+          return this.otherItems().reduce((sum, item) => sum + (item.total || 0), 0);
+        },
+
         calculateTotal() {
-          return this.items.reduce((sum, item) => sum + (item.total || 0), 0);
+          return this.calculateGroup4Total() + this.calculateOtherGroupsTotal();
         },
 
         generateText() {
