--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <div class="container my-5" x-data="productApp()" x-init="init()">
     <h2 class="text-center">產品清單</h2>
     <div class="d-flex justify-content-between align-items-center mb-3 flex-wrap gap-2">
-      <select class="form-select w-auto" x-model="currentSource" @change="loadData()" title="選擇資料來源">
+      <!-- <select class="form-select w-auto" x-model="currentSource" @change="loadData()" title="選擇資料來源">
         <option value="non_pickup">送貨</option>
-        <!-- <option value="pickup">自取</option> -->
-      </select>
+        <option value="pickup">自取</option> 
+      </select> -->
       <button class="btn btn-secondary" @click="showOnlyWithCount = !showOnlyWithCount">
         <span x-text="showOnlyWithCount ? '顯示全部商品' : '只顯示有數量的商品'"></span>
       </button> 
