修改彩蛋字樣

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         loadData() {
           const fileName = this.authorized == true ? 'non_pickup.json' : 'error.json';
           if(this.authorized == true && Math.random() < 0.01) {
-            alert('🎁 彩蛋限定｜招財進寶，業績爆棚！');
+            alert('🎁 彩蛋限定\n招財進寶，業績爆棚！');
           } 
           localStorage.setItem('jsonSource', this.currentSource);
           const savedData = JSON.parse(localStorage.getItem('productData_' + this.currentSource) || '{}');
