--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 lastGroup = item.product_group;
               }
 
-              text += `${item.product_name}:${item.count};\n`;
+              text += `【${item.product_name}】:${item.count};\n`;
             }
           });
 
