增加一些註解

--- a/index.html
+++ b/index.html
@@ -139,7 +139,11 @@
           </h5>
         </div>
 
-        <span class="text-danger m-2"> 系統只會對打勾的產品進行金額試算喔！ </span>
+        <span class="text-danger m-2"> 1.系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～ </span>
+        <br>
+        <span class="text-danger m-2"> 2.文字內容增加 金額試算 以及 成員代號 的紀錄！ </span>
+        <br>
+        <span class="text-danger m-2"> 3.已新增「牛舌餅（包）」至商品列表 </span>
 
         <!-- 功能按鈕 -->
         <div class="mt-4 d-flex gap-2 flex-wrap">
