--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@
               <option value="南二">南二</option>
               <option value="南三">南三</option>
               <option value="南四">南四</option>
+              <option value="南五" >南五</option>
+              <option value="小蝦米">小蝦米</option>
               <option value="阿邦">阿邦</option>
               <option value="小妹">小妹</option>
             </select>
