--- a/index.html
+++ b/index.html
@@ -143,9 +143,7 @@
           <li>
             系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
           </li>
-          <li>文字內容增加金額試算以及成員代號的紀錄！</li>
-          <li>已新增「牛舌餅（包）」至商品列表</li>
-          <li>請務必選擇成員代號，以便正確記錄資料。</li>
+          <li>新增人員 : 小小妹</li>
         </ol>
 
         <!-- 功能按鈕 -->
@@ -178,6 +176,7 @@
               <option value="小蝦米">小蝦米</option>
               <option value="阿邦">阿邦</option>
               <option value="小妹">小妹</option>
+              <option value="小小妹">小小妹</option>
             </select>
           </div>
 
