--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
             系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
           </li>
           <li>新增人員 : 小小妹</li>
+          <li>新增零食 : 芒果乾(箱)、魷魚絲(箱)、黃魚酥(箱)</li>
         </ol>
 
         <!-- 功能按鈕 -->
