--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
           </li>
           <li>新增人員 : 小小妹</li>
           <li>新增零食 : 芒果乾(箱)、魷魚絲(箱)、黃魚酥(箱)</li>
+          <li>新增餅類 : 老婆餅(檸檬)</li>
         </ol>
 
         <!-- 功能按鈕 -->
