--- a/index.html
+++ b/index.html
@@ -143,9 +143,7 @@
           <li>
             系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
           </li>
-          <li>新增人員 : 小小妹</li>
-          <li>新增零食 : 芒果乾(箱)、魷魚絲(箱)、黃魚酥(箱)</li>
-          <li>新增餅類 : 老婆餅(檸檬)</li>
+          <li>新增人員 : 北六</li>
         </ol>
 
         <!-- 功能按鈕 -->
@@ -170,6 +168,7 @@
               <option value="北三">北三</option>
               <option value="北四">北四</option>
               <option value="北五">北五</option>
+              <option value="北六">北六</option>
               <option value="南一">南一</option>
               <option value="南二">南二</option>
               <option value="南三">南三</option>
