--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
   <h1>雲端 JSON 編輯器</h1>
   <textarea x-model="content"></textarea>
   <br>
-  <button @click="save()">存回雲端</button>
+  <button @click="save()">雲端</button>
 
   <script>
     function jsonEditor() {
